--- a/views/layouts/left_sidebar.ejs
+++ b/views/layouts/left_sidebar.ejs
@@ -262,6 +262,41 @@
                         </ul>
                     </div>
                 </li>
+                <!-- Seller -->
+                <li>
+                    <a href="index.html#seller" data-bs-toggle="collapse">
+                        <!-- <i class="mdi mdi-shopping"></i> -->
+                        <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M21.1966 19.6164V17.6164C21.1966 15.7526 19.9218 14.1865 18.1966 13.7425M14.6966 1.9072C16.1625 2.50059 17.1966 3.93775 17.1966 5.61644C17.1966 7.29513 16.1625 8.73229 14.6966 9.32568M16.1966 19.6164C16.1966 17.7527 16.1966 16.8208 15.8921 16.0857C15.4861 15.1056 14.7074 14.3269 13.7273 13.9209C12.9922 13.6164 12.0604 13.6164 10.1966 13.6164H7.19659C5.33283 13.6164 4.40094 13.6164 3.66586 13.9209C2.68575 14.3269 1.90705 15.1056 1.50108 16.0857C1.19659 16.8208 1.19659 17.7527 1.19659 19.6164M12.6966 5.61644C12.6966 7.82558 10.9057 9.61644 8.69659 9.61644C6.48746 9.61644 4.69659 7.82558 4.69659 5.61644C4.69659 3.4073 6.48746 1.61644 8.69659 1.61644C10.9057 1.61644 12.6966 3.4073 12.6966 5.61644Z"
+                                stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+
+                        <span>Seller</span>
+                        <span class="menu-arrow"></span>
+                    </a>
+                    <div class="collapse" id="seller">
+                        <ul class="nav-second-level">
+                            <li>
+                                <a href="/seller/add_seller">
+
+                                    <i class="mdi mdi-circle" style="font-size: 6px;margin-right: 10px;"></i>
+                                    <span>Add Seller
+                                    </span></a>
+                            </li>
+                            <li>
+                                <a href="/seller/seller_list">
+
+                                    <i class="mdi mdi-circle" style="font-size: 6px;margin-right: 10px;"></i>
+                                    <span>Seller List
+                                    </span></a>
+                            </li>
+
+
+
+                        </ul>
+                    </div>
+                </li>
 
                 <!-- CRM -->
                 <!-- <li>
