--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -208,7 +208,8 @@
                       </h6>
                       <ul class="list-unstyled">
                         <%sub.categories.forEach(cate=>{%>
-                          <li><a href="/product/all_Product/<%=cate._id%>/<%=cate.category%>">
+                          <li>
+                            <a href="/product/all_Product/<%=cate._id%>/<%=cate.category%>">
                               <%=cate.category%>
                             </a>
                           </li>
@@ -2952,7 +2953,9 @@
               <div class="position-relative overflow-hidden">
 
                 <a href=" ">
-                  <img src="../../front_assets/img/ribon/mens.webp" class="card-img-top" alt="...">
+                  <!-- <img src="../../front_assets/img/ribon/mens.webp" class="card-img-top" alt="..."> -->
+                  <img src="../../front_assets/img/ribon/medal_brand/Mask group-6.png" class="card-img-top" alt="...">
+
                 </a>
               </div>
 
@@ -3194,7 +3197,8 @@
               <div class="position-relative overflow-hidden">
 
                 <a href=" ">
-                  <img src="../../front_assets/img/ribon/The_Collective.webp" class="card-img-top" alt="...">
+
+                  <img src="../../front_assets/img/ribon/global_brand/Group 114.png" class="card-img-top" alt="...">
 
                 </a>
               </div>
@@ -3204,7 +3208,7 @@
               <div class="position-relative overflow-hidden">
 
                 <a href=" ">
-                  <img src="/front_assets/img/ribon/medal_brand/Mask group-1.png" class="card-img-top" alt="...">
+                  <img src="../../front_assets/img/ribon/global_brand/Group 115.png" class="card-img-top" alt="...">
                 </a>
               </div>
 
@@ -3213,7 +3217,7 @@
               <div class="position-relative overflow-hidden">
 
                 <a href=" ">
-                  <img src="/front_assets/img/ribon/medal_brand/Mask group-2.png" class="card-img-top" alt="...">
+                  <img src="../../front_assets/img/ribon/global_brand/Group 116.png" class="card-img-top" alt="...">
                 </a>
               </div>
 
@@ -3222,7 +3226,7 @@
               <div class="position-relative overflow-hidden">
 
                 <a href=" ">
-                  <img src="/front_assets/img/ribon/medal_brand/Mask group-3.png" class="card-img-top" alt="...">
+                  <img src="../../front_assets/img/ribon/global_brand/Group 117.png" class="card-img-top" alt="...">
                 </a>
               </div>
 
@@ -3231,7 +3235,7 @@
               <div class="position-relative overflow-hidden">
 
                 <a href=" ">
-                  <img src="/front_assets/img/ribon/medal_brand/Mask group-4.png" class="card-img-top" alt="...">
+                  <img src="../../front_assets/img/ribon/global_brand/Group 125.png" class="card-img-top" alt="...">
                 </a>
               </div>
 
@@ -3240,7 +3244,7 @@
               <div class="position-relative overflow-hidden">
 
                 <a href=" ">
-                  <img src="/front_assets/img/ribon/medal_brand/Mask group-1.png" class="card-img-top" alt="...">
+                  <img src="../../front_assets/img/ribon/global_brand/Group 127.png" class="card-img-top" alt="...">
                 </a>
               </div>
 
@@ -4207,7 +4211,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="/product/all_products">
-                    <img src="../../front_assets/img/ribon/shop/HP-4_05.jpg" class="img-fluid" alt="">
+                    <img src="../../front_assets/img/featured_all_categories/Group 137.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4217,7 +4221,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-1.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 138.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4227,7 +4231,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-2.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 139.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4237,7 +4241,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-3.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 146.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4247,7 +4251,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-4.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 141.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4257,7 +4261,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-5.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 142.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4267,7 +4271,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-6.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 143.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4277,7 +4281,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-1.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 144.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4287,7 +4291,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-2.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 145.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4297,7 +4301,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-3.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 140.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4307,7 +4311,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-4.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 147.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4317,7 +4321,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-5.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 148.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4327,7 +4331,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-6.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 149.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4337,7 +4341,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-2.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 150.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4347,7 +4351,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-1.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 151.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4357,7 +4361,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-3.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 152.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4367,7 +4371,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-4.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 153.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4377,7 +4381,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-5.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 154.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4387,7 +4391,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-6.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 155.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4397,7 +4401,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-1.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 170.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4407,7 +4411,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-5.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 157.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4417,7 +4421,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-6.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 158.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4427,7 +4431,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-1.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 159.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4437,7 +4441,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-2.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 160.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4447,7 +4451,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-3.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 161.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4457,7 +4461,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-1.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 162.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4467,7 +4471,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-4.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 163.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4477,7 +4481,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-5.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 164.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4487,7 +4491,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-4.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 165.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4497,7 +4501,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-2.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 166.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4507,7 +4511,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-3.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 167.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4517,7 +4521,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-1.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 168.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
@@ -4527,7 +4531,7 @@
               <div class="p-0">
                 <div class="d-flex align-items-center">
                   <a href="javascript:;">
-                    <img src="/front_assets/img/ribon/medal_brand/Mask group-4.png" class="img-fluid" alt="...">
+                    <img src="../../front_assets/img/featured_all_categories/Group 169.png" class="img-fluid" alt="">
                   </a>
                 </div>
               </div>
