--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -174,7 +174,7 @@
 <body class="">
   <!-- <body class="container-fluid"> -->
   <!--page loader-->
-  <div class="loader-wrapper">
+  <div class="loader-wrapper d-none">
     <div class="d-flex justify-content-center align-items-center position-absolute top-50 start-50 translate-middle">
       <div class="spinner-border text-dark" role="status">
         <span class="visually-hidden">Loading...</span>
