--- a/views/product/all_product.ejs
+++ b/views/product/all_product.ejs
@@ -1189,6 +1189,8 @@
               <li><a href="javascript:;">Returns</a></li>
               <li><a href="javascript:;">Privacy policy</a></li>
               <li><a href="javascript:;">Grievance Officer</a></li>
+              <li><a href="/terms_condition">Terms & Condition</a></li>
+
             </ul>
           </div>
         </div>
