--- a/views/product/product_details.ejs
+++ b/views/product/product_details.ejs
@@ -1268,6 +1268,8 @@
               <li><a href="javascript:;">Privacy</a></li>
               <li><a href="javascript:;">Terms</a></li>
               <li><a href="javascript:;">Complaints</a></li>
+              <li><a href="/terms_condition">Terms & Condition</a></li>
+
             </ul>
           </div>
         </div>
