--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -21,7 +21,7 @@
   <link href="../../front_assets/css/style.css" rel="stylesheet">
   <link href="../../front_assets/css/dark-theme.css" rel="stylesheet">
 
-  <title>Roofs</title>
+  <title>Roops</title>
   <style>
     .tab {
       display: none;
@@ -4960,6 +4960,7 @@
               <li><a href="javascript:;">Returns</a></li>
               <li><a href="javascript:;">Privacy policy</a></li>
               <li><a href="javascript:;">Grievance Officer</a></li>
+              <li><a href="/terms_condition">Terms & Condition</a></li>
             </ul>
           </div>
         </div>
