--- a/views/user/about-us.ejs
+++ b/views/user/about-us.ejs
@@ -417,7 +417,7 @@
               <li><a href="javascript:;">Contact Us</a></li>
               <li><a href="javascript:;">FAQ</a></li>
               <li><a href="javascript:;">Privacy</a></li>
-              <li><a href="javascript:;">Terms</a></li>
+              <li><a href="/terms_condition">Terms & Condition</a></li>
               <li><a href="javascript:;">Complaints</a></li>
             </ul>
           </div>
