--- a/views/user/product_details.ejs
+++ b/views/user/product_details.ejs
@@ -1092,6 +1092,8 @@
               <li><a href="javascript:;">Returns</a></li>
               <li><a href="javascript:;">Privacy policy</a></li>
               <li><a href="javascript:;">Grievance Officer</a></li>
+              <li><a href="/terms_condition">Terms & Condition</a></li>
+
             </ul>
           </div>
         </div>
