--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -4959,8 +4959,8 @@
               <li><a href="javascript:;">Cancellation</a></li>
               <li><a href="javascript:;">Returns</a></li>
               <li><a href="javascript:;">Privacy policy</a></li>
-              <li><a href="javascript:;">Grievance Officer</a></li>
-              <li><a href="/terms_condition">Terms & Condition</a></li>
+                <li><a href="/privacy_policy">Privacy policy</a></li>
+                <li><a href="/terms_condition">Terms & Condition</a></li>
             </ul>
           </div>
         </div>
