--- a/views/product/all_product.ejs
+++ b/views/product/all_product.ejs
@@ -1187,9 +1187,9 @@
               <li><a href="javascript:;">Shipping</a></li>
               <li><a href="javascript:;">Cancellation</a></li>
               <li><a href="javascript:;">Returns</a></li>
-              <li><a href="javascript:;">Privacy policy</a></li>
-              <li><a href="javascript:;">Grievance Officer</a></li>
+              <li><a href="/privacy_policy">Privacy policy</a></li>
               <li><a href="/terms_condition">Terms & Condition</a></li>
+              <li><a href="javascript:;">Grievance Officer</a></li>
 
             </ul>
           </div>
