--- a/views/product/product_details.ejs
+++ b/views/product/product_details.ejs
@@ -1265,9 +1265,9 @@
               <li><a href="javascript:;">About Us</a></li>
               <li><a href="javascript:;">Contact Us</a></li>
               <li><a href="javascript:;">FAQ</a></li>
-              <li><a href="javascript:;">Privacy</a></li>
-              <li><a href="javascript:;">Terms</a></li>
+              <li><a href="/privacy_policy">Privacy & Privacy</a></li>
               <li><a href="javascript:;">Complaints</a></li>
+              <li><a href="/privacy_policy">Privacy & Privacy</a></li>
               <li><a href="/terms_condition">Terms & Condition</a></li>
 
             </ul>
