--- a/views/user/about-us.ejs
+++ b/views/user/about-us.ejs
@@ -416,7 +416,7 @@
               <li><a href="javascript:;">About Us</a></li>
               <li><a href="javascript:;">Contact Us</a></li>
               <li><a href="javascript:;">FAQ</a></li>
-              <li><a href="javascript:;">Privacy</a></li>
+              <li><a href="/privacy_policy">Privacy</a></li>
               <li><a href="/terms_condition">Terms & Condition</a></li>
               <li><a href="javascript:;">Complaints</a></li>
             </ul>
