--- a/views/user/authentication-register.ejs
+++ b/views/user/authentication-register.ejs
@@ -327,8 +327,8 @@
               <li><a href="javascript:;">About Us</a></li>
               <li><a href="javascript:;">Contact Us</a></li>
               <li><a href="javascript:;">FAQ</a></li>
-              <li><a href="javascript:;">Privacy</a></li>
-              <li><a href="javascript:;">Terms</a></li>
+              <li><a href="/privacy_policy">Privacy policy</a></li>
+              <li><a href="/terms_condition">Terms & Condition</a></li>
               <li><a href="javascript:;">Complaints</a></li>
             </ul>
           </div>
