--- a/views/user/product_details.ejs
+++ b/views/user/product_details.ejs
@@ -1090,9 +1090,9 @@
               <li><a href="javascript:;">Shipping</a></li>
               <li><a href="javascript:;">Cancellation</a></li>
               <li><a href="javascript:;">Returns</a></li>
-              <li><a href="javascript:;">Privacy policy</a></li>
-              <li><a href="javascript:;">Grievance Officer</a></li>
+              <li><a href="/privacy_policy">Privacy policy</a></li>
               <li><a href="/terms_condition">Terms & Condition</a></li>
+              <li><a href="javascript:;">Grievance Officer</a></li>
 
             </ul>
           </div>
