--- a/views/user/authentication-register.ejs
+++ b/views/user/authentication-register.ejs
@@ -37,7 +37,7 @@
   <!--start top header-->
   <header class="top-header">
     <nav class="navbar navbar-expand-xl w-100 navbar-dark container gap-3">
-      <a class="navbar-brand d-none d-xl-inline" href="index.html"><img src="images/logo.webp" class="logo-img" alt=""></a>
+      <a class="navbar-brand d-xl-inline" href="/"><img src="../../front_assets/img/roops_logo.png" style="width: 50px;" alt=""></a>
       <a class="mobile-menu-btn d-inline d-xl-none" href="javascript:;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
         <i class="bi bi-list"></i>
       </a>
@@ -294,87 +294,86 @@
 
 
   <!--start footer-->
-  <section class="footer-section bg-section-2 section-padding">
+  <section class="footer-section bg-section-2 section-padding d-none d-lg-block" style="background-color: #FFF6F6;">
     <div class="container">
       <div class="row row-cols-1 row-cols-lg-4 g-4">
-        <div class="col">
-          <div class="footer-widget-6">
-            <img src="images/logo.webp" class="logo-img mb-3" alt="">
-            <h5 class="mb-3 fw-bold">About Us</h5>
-            <p class="mb-2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
 
-            <a class="link-dark" href="javascript:;">Read More</a>
-          </div>
-        </div>
-        <div class="col">
+        <div class="col d-flex d-md-block d-sm-flex justify-content-center">
           <div class="footer-widget-7">
-            <h5 class="mb-3 fw-bold">Explore</h5>
+            <h5 class="mb-3 fw-bold">ONLINE SHOPPING</h5>
             <ul class="widget-link list-unstyled">
-              <li><a href="javascript:;">Fashion</a></li>
+              <li><a href="javascript:;">Men</a></li>
               <li><a href="javascript:;">Women</a></li>
-              <li><a href="javascript:;">Furniture</a></li>
-              <li><a href="javascript:;">Shoes</a></li>
-              <li><a href="javascript:;">Topwear</a></li>
-              <li><a href="javascript:;">Brands</a></li>
               <li><a href="javascript:;">Kids</a></li>
+              <li><a href="javascript:;">Home & Living</a></li>
+              <li><a href="javascript:;">Beauty</a></li>
+              <li><a href="javascript:;">Gift Cards</a></li>
+              <li><a href="javascript:;">Ribbon Insider</a></li>
             </ul>
           </div>
         </div>
-        <div class="col">
-          <div class="footer-widget-8">
-            <h5 class="mb-3 fw-bold">Company</h5>
+
+        <div class="f-1 col d-flex d-md-block d-sm-flex justify-content-center">
+          <div class="footer-widget-7">
+            <h5 class="mb-3 fw-bold">CUSTOMER POLICIES</h5>
             <ul class="widget-link list-unstyled">
-              <li><a href="javascript:;">About Us</a></li>
               <li><a href="javascript:;">Contact Us</a></li>
               <li><a href="javascript:;">FAQ</a></li>
+              <li><a href="javascript:;">T&C</a></li>
+              <li><a href="javascript:;">Terms Of Use</a></li>
+              <li><a href="javascript:;">Track Orders</a></li>
+              <li><a href="javascript:;">Shipping</a></li>
+              <li><a href="javascript:;">Cancellation</a></li>
+              <li><a href="javascript:;">Returns</a></li>
               <li><a href="/privacy_policy">Privacy policy</a></li>
               <li><a href="/terms_condition">Terms & Condition</a></li>
-              <li><a href="javascript:;">Complaints</a></li>
             </ul>
           </div>
         </div>
-        <div class="col">
-          <div class="footer-widget-9">
-            <h5 class="mb-3 fw-bold">Follow Us</h5>
-            <div class="social-link d-flex align-items-center gap-2">
-              <a href="javascript:;"><i class="bi bi-facebook"></i></a>
-              <a href="javascript:;"><i class="bi bi-twitter"></i></a>
-              <a href="javascript:;"><i class="bi bi-linkedin"></i></a>
-              <a href="javascript:;"><i class="bi bi-youtube"></i></a>
-              <a href="javascript:;"><i class="bi bi-instagram"></i></a>
-            </div>
-            <div class="mb-4 mt-4">
-              <h5 class="mb-0 fw-bold">Support</h5>
-              <p class="mb-0 text-muted">support@example.com</p>
-            </div>
-            <div class="">
-              <h5 class="mb-0 fw-bold">Toll Free</h5>
-              <p class="mb-0 text-muted">1800- 8xx 2xx</p>
-            </div>
-          </div>
-        </div>
-      </div><!--end row-->
-      <div class="my-5"></div>
-      <div class="row">
-        <div class="col-12">
-          <div class="text-center">
-            <h5 class="fw-bold mb-3">Download Mobile App</h5>
-          </div>
-          <div class="app-icon d-flex flex-column flex-sm-row align-items-center justify-content-center gap-2">
-            <div>
-              <a href="javascript:;">
-                <img src="images/play-store.webp" width="160" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="javascript:;">
-                <img src="images/apple-store.webp" width="160" alt="">
-              </a>
-            </div>
-          </div>
-        </div>
-      </div><!--end row-->
 
+        <div class="f-2 col d-flex d-md-block d-sm-flex justify-content-center">
+          <div class="footer-widget-7">
+            <h5 class="mb-3 fw-bold">USEFUL LINKS</h5>
+            <ul class="widget-link list-unstyled">
+              <li><a href="javascript:;">Blog</a>
+              </li>
+              <li><a href="javascript:;">Careers</a>
+              </li>
+              <li><a href="javascript:;">Site Map</a>
+              </li>
+              <li><a href="javascript:;">Corporate Information</a>
+              </li>
+              <li><a href="javascript:;">Whitehat</a>
+              </li>
+              <li><a href="javascript:;">Cleartrip</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="f-11 col d-flex d-md-block d-sm-flex justify-content-center">
+          <div class="footer-widget-7">
+            <h5 class="mb-3 fw-bold">Keep In Touch</h5>
+            <ul class="widget-link list-unstyled">
+              <li>
+                <a href="javascript:;">
+                  <i class="fab fa-google me-2"></i>
+                  <i class="fab fa-facebook-f me-2"></i>
+                  <i class="fab fa-twitter me-2"></i>
+                  <i class="fab fa-linkedin me-2"></i>
+                  <i class="fab fa-whatsapp me-2"></i>
+                  <i class="fab fa-tiktok me-2"></i>
+                </a>
+              </li>
+
+            </ul>
+          </div>
+        </div>
+
+      </div>
+      <!-- <div>
+              <img class="d-flex justify-content-center mx-auto my-0" style="width: 200px;" src="img/logo.png" alt="">
+          </div> -->
     </div>
   </section>
   <!--end footer-->
