--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -37,7 +37,7 @@
   <!--start top header-->
   <header class="top-header">
     <nav class="navbar navbar-expand-md w-100 navbar-dark container gap-3">
-      <a class="navbar-brand d-xl-inline" href="/"><img src="../../front_assets/img/ribon/ribon.png" style="width: 40px;" alt=""></a>
+      <a class="navbar-brand d-xl-inline" href="/"><img src="../../front_assets/img/roops_logo.png" style="width: 50px;" alt=""></a>
       <h3 class="fw-bold ms-2 mt-1" style="margin-bottom:0px ;">Checkout</h3>
 
       <div class="primary-menu">
@@ -567,8 +567,6 @@
 
   </div>
   <!--end page content-->
-
-
   <!--start footer-->
   <section class="footer-section bg-section-2 section-padding d-none d-lg-block" style="background-color: #FFF6F6;">
     <div class="container">
@@ -603,7 +601,6 @@
               <li><a href="javascript:;">Returns</a></li>
               <li><a href="/privacy_policy">Privacy policy</a></li>
               <li><a href="/terms_condition">Terms & Condition</a></li>
-              <li><a href="javascript:;">Grievance Officer</a></li>
             </ul>
           </div>
         </div>
@@ -636,7 +633,10 @@
                 <a href="javascript:;">
                   <i class="fab fa-google me-2"></i>
                   <i class="fab fa-facebook-f me-2"></i>
-                  <i class="fab fa-twitter"></i>
+                  <i class="fab fa-twitter me-2"></i>
+                  <i class="fab fa-linkedin me-2"></i>
+                  <i class="fab fa-whatsapp me-2"></i>
+                  <i class="fab fa-tiktok me-2"></i>
                 </a>
               </li>
 
@@ -646,8 +646,8 @@
 
       </div>
       <!-- <div>
-            <img class="d-flex justify-content-center mx-auto my-0" style="width: 200px;" src="img/logo.png" alt="">
-        </div> -->
+              <img class="d-flex justify-content-center mx-auto my-0" style="width: 200px;" src="img/logo.png" alt="">
+          </div> -->
     </div>
   </section>
   <!--end footer-->
