--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -187,7 +187,7 @@
 
   <header class="top-header">
     <nav class="navbar navbar-expand-md w-100 navbar-dark container gap-3">
-      <a class="navbar-brand d-xl-inline" href="/"><img src="../../front_assets/img/ribon/ribon.png" style="width: 40px;" alt=""></a>
+      <a class="navbar-brand d-xl-inline" href="/"><img src="../../front_assets/img/roops_logo.png" style="width: 50px;" alt=""></a>
       <div class="primary-menu">
 
         <ul class="navbar-nav justify-content-start flex-grow-1 gap-1">
@@ -4958,9 +4958,8 @@
               <li><a href="javascript:;">Shipping</a></li>
               <li><a href="javascript:;">Cancellation</a></li>
               <li><a href="javascript:;">Returns</a></li>
-              <li><a href="javascript:;">Privacy policy</a></li>
-                <li><a href="/privacy_policy">Privacy policy</a></li>
-                <li><a href="/terms_condition">Terms & Condition</a></li>
+              <li><a href="/privacy_policy">Privacy policy</a></li>
+              <li><a href="/terms_condition">Terms & Condition</a></li>
             </ul>
           </div>
         </div>
@@ -4993,7 +4992,10 @@
                 <a href="javascript:;">
                   <i class="fab fa-google me-2"></i>
                   <i class="fab fa-facebook-f me-2"></i>
-                  <i class="fab fa-twitter"></i>
+                  <i class="fab fa-twitter me-2"></i>
+                  <i class="fab fa-linkedin me-2"></i>
+                  <i class="fab fa-whatsapp me-2"></i>
+                  <i class="fab fa-tiktok me-2"></i>
                 </a>
               </li>
 
