--- a/views/user/product_details.ejs
+++ b/views/user/product_details.ejs
@@ -39,7 +39,7 @@
   <!--start top header-->
   <header class="top-header">
     <nav class="navbar navbar-expand-md w-100 navbar-dark container gap-3">
-      <a class="navbar-brand d-xl-inline" href="/"><img src="../../front_assets/img/ribon/ribon.png" style="width: 40px;" alt=""></a>
+      <a class="navbar-brand d-xl-inline" href="/"><img src="../../front_assets/img/roops_logo.png" style="width: 50px;" alt=""></a>
       <div class="primary-menu">
         <ul class="navbar-nav justify-content-start flex-grow-1 gap-1">
 
@@ -1057,7 +1057,6 @@
   </div>
   <!--end page content-->
 
-
   <!--start footer-->
   <section class="footer-section bg-section-2 section-padding d-none d-lg-block" style="background-color: #FFF6F6;">
     <div class="container">
@@ -1092,8 +1091,6 @@
               <li><a href="javascript:;">Returns</a></li>
               <li><a href="/privacy_policy">Privacy policy</a></li>
               <li><a href="/terms_condition">Terms & Condition</a></li>
-              <li><a href="javascript:;">Grievance Officer</a></li>
-
             </ul>
           </div>
         </div>
@@ -1126,7 +1123,10 @@
                 <a href="javascript:;">
                   <i class="fab fa-google me-2"></i>
                   <i class="fab fa-facebook-f me-2"></i>
-                  <i class="fab fa-twitter"></i>
+                  <i class="fab fa-twitter me-2"></i>
+                  <i class="fab fa-linkedin me-2"></i>
+                  <i class="fab fa-whatsapp me-2"></i>
+                  <i class="fab fa-tiktok me-2"></i>
                 </a>
               </li>
 
